fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ html, body {
   margin: 0;
   min-height: 100%;
   padding: 0;
+  overflow: hidden;
 }
 
 #root {
